:bed: Fix flex issue on iOS

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   overflow: hidden;
-  margin: 0;
+  margin: 0 !important;
 }
 
 a {
@@ -15,18 +15,18 @@ a {
   position: absolute;
   min-width: 100vw;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 .hero__content {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  margin: 40vh auto 0;
+  max-width: 25vh;
 }
 
 .hero__logo {
-  max-width: 25vh;
+  max-width: 100%;
   margin: 0 auto;
 }
 
@@ -34,8 +34,9 @@ a {
   background-color: #ae3f2c;
   color: #fff;
   margin: 2em auto 0;
-  padding: 0.25em 0.5em;
-  font-size: 2.25vh;
+  padding: 0.25em 0.25em;
+  font-size: 2vh;
   text-transform: uppercase;
+  text-align: center;
   letter-spacing: 0.25em;
 }
